--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -26,6 +26,7 @@ body {
 	display:inline-block;
 	color: #f9f9f9;
 	font-style: normal;
+	pointer-events:none;
 }
 
 .badge.fold {
@@ -65,6 +66,7 @@ body {
 	position: relative;
 	margin: 0 4px;
 	display: inline-block;
+	pointer-events:none;
 }
 
 @keyframes throbber {
