--- a/src/dark.css
+++ b/src/dark.css
@@ -17,7 +17,8 @@
 	--badge-text-color: #f9f9fa;
 
 	--fold-indicator-background-color: #737373;
-	--mute-indicator-background-color: #ff0039;
+	--mute-indicator-hover-color: #ff0039;
+	--mute-indicator-background-color: #9a0007;
 
 	--favicon-fill-color: #f9f9fa;
 
