--- a/src/light.css
+++ b/src/light.css
@@ -17,7 +17,8 @@
 	--badge-text-color: #0c0c0d;
 
 	--fold-indicator-background-color: #b1b1b3;
-	--mute-indicator-background-color: #ff0039;
+	--mute-indicator-hover-color: #ff0039;
+	--mute-indicator-background-color: #9a0007;
 
 	--favicon-fill-color: #0c0c0d;
 
