--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -50,22 +50,21 @@ body {
 .mute-icon-container {
 	width: 14px;
 	height: 14px;
-	position: relative;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
 }
 
 .mute {
 	float:right;
-	width: 20px;
-	height: 20px;
-	background-color: var(--sidebar-background-color);
+	width: 18px;
+	height: 18px;
+	background-color: var(--mute-indicator-background-color);
 	pointer-events: auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .mute:hover {
-	background-color: var(--mute-indicator-background-color);
+	background-color: var(--mute-indicator-hover-color);
 }
 
 .favicon {
@@ -156,6 +155,12 @@ body {
 	height: 12px;
 	border-radius: 6px;
 	position: initial;
+	margin: 1px;
+}
+
+.pinned > .mute > .mute-icon-container {
+	width: 10px;
+	height: 10px;
 }
 
 .pinned > .tabTitle {
