--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -1,12 +1,15 @@
 body {
 	background-color: var(--sidebar-background-color);
 	color: var(--sidebar-color);
-	overflow-x: hidden;
 }
 .tab {
 	width: 100%;
 	height: 26px;
 	clear: both;
+	column-gap: 5px;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
 }
 
 .tab:hover {
@@ -16,35 +19,22 @@ body {
 .badge {
 	-moz-context-properties: fill;
 	fill: var(--badge-background);
-	width: 16px;
-	height: 16px;
-	top: 50%;
-	transform: translateY(-50%);
-	position: relative;
-	margin: 0 5px;
 	border-radius: 4px;
-	display:inline-block;
 	color: var(--badge-text-color);
 	font-style: normal;
 	pointer-events:none;
 }
 
-.badge.fold {
-	width: auto;
-	padding: 0px 4px;
-}
-
 .context {
 	width: 2px;
 	height: 100%;
-	float:left;
 	margin-right:-2px;
+	flex-shrink: 0;
 }
 
 .fold {
-	margin: 0 0 0 5px;
-	float:left;
 	background-color: var(--fold-indicator-background-color);
+	padding: 0 0.2rem;
 }
 
 .mute-icon-container {
@@ -53,7 +43,6 @@ body {
 }
 
 .mute {
-	float:right;
 	width: 18px;
 	height: 18px;
 	background-color: var(--mute-indicator-background-color);
@@ -72,14 +61,9 @@ body {
 	fill: var(--favicon-fill-color);
 	width: 16px;
 	height: 16px;
-	float:left;
-	top: 50%;
-	transform: translateY(-50%);
-	position: relative;
-	margin-left: 5px;
-	display: inline-block;
 	background-size: contain;
 	pointer-events:none;
+	flex-shrink: 0;
 }
 
 .attention {
@@ -90,7 +74,6 @@ body {
 	top: 50%;
 	transform: translateY(-50%);
 	position: relative;
-	margin-left: 5px;
 	display: inline-block;
 	background-size: contain;
 	pointer-events:none;
@@ -116,12 +99,34 @@ body {
 	color: var(--tab-active-color);
 }
 
+.hspace {
+	flex-grow: 1
+}
+
 .tabTitle {
-	margin-left: 5px;
 	white-space: nowrap;
 	line-height: 26px;
 	width: 0px;
 	display:inline-block;
+}
+
+.closeButton {
+	display: none;
+	width: 22px;
+	height: 22px;
+	border-radius: 4px;
+	margin-right: 4px;
+	justify-content: center;
+	align-items: center;
+}
+
+.closeIcon {
+	background-image: url("./icons/close.svg");
+	background-size: contain;
+	-moz-context-properties: fill;
+	fill: var(--favicon-fill-color);
+	width: 12px;
+	height: 12px;
 }
 
 .selection {
@@ -140,8 +145,34 @@ body {
 	background-color: var(--tab-active-hover-background-color);
 }
 
+.tab:hover > .closeButton {
+	display: flex;
+	background-color: var(--tab-hover-background-color);
+}
+
+.tab.selection:hover > .closeButton {
+	background-color: var(--tab-selected-hover-background-color);
+}
+
+.tab.active:hover > .closeButton {
+	background-color: var(--tab-active-hover-background-color);
+}
+
+.closeButton:hover > .closeIcon {
+	width: 16px;
+	height: 16px;
+}
+
+.tab.pinned:hover > .closeButton {
+	display: none;
+}
+
 .childContainer {
 	padding-left: 15px;
+}
+
+.tab .pinned {
+	display: inline-block;
 }
 
 .pinned {
@@ -150,12 +181,14 @@ body {
 	clear: none;
 }
 
+.pinned > .closeButton {
+	display: none;
+}
+
 .pinned > .badge {
 	width: 12px;
 	height: 12px;
 	border-radius: 6px;
-	position: initial;
-	margin: 1px;
 }
 
 .pinned > .mute > .mute-icon-container {
@@ -165,6 +198,18 @@ body {
 
 .pinned > .tabTitle {
 	display: none;
+}
+
+.pinned > .hspace {
+	display: none;
+}
+
+.pinned .tab {
+	column-gap: 0px;
+}
+
+.pinned > .mute  {
+	transform: translate(-12px, 5px);
 }
 
 .hidden {
